# Parallel-Computing

./: .gitignore  CMakeLists.txt  README.md  parallel.c  parallel.cl
